Unify tags and formatting

--- a/src/content/posts/articles/about-marwang-2.mdx
+++ b/src/content/posts/articles/about-marwang-2.mdx
@@ -1,20 +1,22 @@
 ---
 title: Марванг
-description: Марванг
+description: Сеттинг Марванг
 date: 2021-06-23
-tags: 
+tags:
   - Марванг
 ---
 
-У нашей команды опять наклевывается небольшая кампания по нашему недоразвитому сеттингу Марвангу. И возник вопрос - публиковать ли здесь материалы по этому сеттингу?  
+У нашей команды опять наклевывается небольшая кампания по нашему незаконченному сеттингу Марвангу. И возник вопрос - публиковать ли здесь материалы по этому сеттингу?
 
 Описание сеттинга - ниже.
 
-Марванг это переживший глобальный катаклизм высокоразвитый маготехнический мир. 
+Марванг это переживший глобальный катаклизм высокоразвитый маготехнический мир.
 
 ## Место действия приключений
 
-В основном действие приключений разворачивается на просторах Империи Атеро (также называеомой Новой Империей), которая является единственным значимым государством на материке. В Империи Атеро странным образом сочетается жесткое имперское управление, весьма автономоное местное самоуправление, диктат законов и высокий уровень гражданских прав и свобод. Новая империя постоянно пытается "отгрызть" еще кусочек земель - зачистить от опасных существ и эффектов, возникших в ходе или после Катаклизма. 
+В основном действие приключений разворачивается на просторах Империи Атеро (также называеомой Новой Империей), которая является единственным значимым государством на материке.
+
+В Империи Атеро странным образом сочетается жесткое имперское управление, весьма автономоное местное самоуправление, диктат законов и высокий уровень гражданских прав и свобод. Новая империя постоянно пытается "отгрызть" еще кусочек земель - зачистить от опасных существ и эффектов, возникших в ходе или после Катаклизма.
 
 При этом не обходится и без внешних угроз:
 
@@ -23,7 +25,7 @@ tags:
 - Драконий Кряж и его бесчисленные красные драконы которые постоянно пробуют на прочность северные рубежи Империи
 - Чудовища, постоянно прущие из смертносных джунглей на востоке и штурмующие Ааронов вал.
 - Дальние - демонические существа из-за изнанки пространства,
-- шаткий баланс договоров с Хранителями Спящего - могущественными полубогами, получившими свои силы от неизвестной сущности, чей покой они ныне оберегают, защищая покой Спящего от орд Дальних, стихийных духов, жадной до силы нежити в тринадцати Цитаделях, разбросанных по всему миру.
+- Шаткий баланс договоров с Хранителями Спящего - могущественными полубогами, получившими свои силы от неизвестной сущности, чей покой они ныне оберегают, защищая покой Спящего от орд Дальних, стихийных духов, жадной до силы нежити в тринадцати Цитаделях, разбросанных по всему миру.
 
 ## Особенности сеттинга
 
