--- a/src/content/posts/articles/about-spells.mdx
+++ b/src/content/posts/articles/about-spells.mdx
@@ -1,13 +1,12 @@
 ---
 title: Неочевидные нюансы заклинаний
-description: Про Chill touch и Healing word
+description: Про Chill Touch и Healing Word
 date: 2021-12-04
-tags: 
-  - Chill touch
-  - Healing word
+tags:
+  - Заклинания
 ---
 
-Chill touch \[Леденящее прикосновение\] - кантрип некромантии позволяющий наносить дальнобойную атаку заклинанием на расстоянии нанося 1к8 урона некротическим уроном.
+Леденящее прикосновение \[Chill Touch\] - кантрип некромантии позволяющий наносить дальнобойную атаку заклинанием на расстоянии нанося 1к8 урона некротическим уроном.
 
 В плейтесте 5е это заклинание имело дистанцию прикосновение и наносило урон холодом.
 
