--- a/src/content/posts/articles/cormyr-1493-1.mdx
+++ b/src/content/posts/articles/cormyr-1493-1.mdx
@@ -1,8 +1,8 @@
 ---
-title: Кормир 1493 ЛД - выпуск 1
+title: Кормир 1493 ЛД - Выпуск 1
 description: Описание Кормира в 1493 ЛД
 date: 2021-04-17
-tags: 
+tags:
   - Кормир
 ---
 
@@ -10,11 +10,11 @@ tags:
 
 Материалы выкладываю в формате word docx и pdf
 
-[Cormyr 1493 DR Work In Progress Issue 1.docx](https://1drv.ms/w/s!Atcrhwwo1lBA0ftoj85Ay4xOibolHQ?e=r8uIBD)  
+[Cormyr 1493 DR Work In Progress Issue 1.docx](https://1drv.ms/w/s!Atcrhwwo1lBA0ftoj85Ay4xOibolHQ?e=r8uIBD)
 
 [cormyr-1493-dr-work-in-progress-issue-1](https://cyborgsandmages.files.wordpress.com/2021/04/cormyr-1493-dr-work-in-progress-issue-1.pdf)[Скачать](https://cyborgsandmages.files.wordpress.com/2021/04/cormyr-1493-dr-work-in-progress-issue-1.pdf)
 
-[CORMYR\_IN\_TABLES\_V13\_16-04-2021rev1.xlsb](https://1drv.ms/x/s!Atcrhwwo1lBA0ftmldx5-V_hWJFNQw?e=IFMwYN)
+[CORMYR_IN_TABLES_V13_16-04-2021rev1.xlsb](https://1drv.ms/x/s!Atcrhwwo1lBA0ftmldx5-V_hWJFNQw?e=IFMwYN)
 
 [Adventuring Charter.docx](https://1drv.ms/w/s!Atcrhwwo1lBA0bIt8F9clSG5CRGr7Q?e=AdG2FZ)
 
