--- a/src/content/posts/articles/descriptive-and-acrive-roleplaying.mdx
+++ b/src/content/posts/articles/descriptive-and-acrive-roleplaying.mdx
@@ -3,10 +3,8 @@ title: Социальные взаимодействия. Активный и о
 description: Описывается использование основных способов отыгрыша персонажа в социальных столкновениях
 date: 2023-05-16
 tags:
-- 'Отыгрыш'
-- 'Социальное взаимодействие'
-- 'Активный отыгрыш'
-- 'Описательный отыгрыш'
+  - Отыгрыш
+  - Социальное взаимодействие
 ---
 
 # Социальное взаимодействие
@@ -71,5 +69,3 @@ tags:
 При взаимодействии с персонажем обратите пристальное внимание на то, как Мастер изображает настроение, диалоги и личность персонажа. Если можете, соберите информацию о НИП перед взаимодействием. Узнав, что мотивирует этого персонажа, вы сможете изменить его или ее отношение в вашу пользу. В частности, вы можете определить черты характера, идеалы, недостатки и связи персонажа и сыграть на них, чтобы повлиять на отношение НИПперсонажа.
 
 Взаимодействия в Core d20 RPG очень похожи на взаимодействия в реальной жизни. Если вы можете предложить персонажу то, что они хотят , угрожать им чем-то, чего они боятся, или сыграть на их симпатиях и целях, вы можете использовать слова, чтобы получить почти все, что вы хотите. С другой стороны, если вы оскорбляете гордого воина или плохо отзываетесь о союзниках знати, ваши попытки убедить или обмануть не увенчаются успехом.
-
-
