--- a/src/content/posts/articles/dragonchess.mdx
+++ b/src/content/posts/articles/dragonchess.mdx
@@ -2,8 +2,8 @@
 title: Драконьи шахматы
 description: Драконьи шахматы это один из доступных персонажам игроков игровых наборов в пятой редакции
 date: 2020-02-17
-tags: 
-- Драконьи шахматы
+tags:
+  - Мини-игры
 ---
 
 Драконьи шахматы это один из доступных персонажам игроков игровых наборов в пятой редакции. Эта статья расскажет как все таки в них играть не просто броском костей.
@@ -22,9 +22,9 @@ tags:
 
 Так как многие фигуры могут ходить в трех измерениях, номенклатура ходов была стандартизована следующим образом: «по горизонтали» относится к ходу вправо-влево, «по вертикали» — ход вперед (в сторону противника) или назад (к своему краю доски), а «вверх» и «вниз» относится к ходу с одной доски на другую.
 
-* * *
+---
 
-* * *
+---
 
 ## ВЕРХНЯЯ ДОСКА
 
@@ -35,15 +35,15 @@ tags:
 На верхней доске ходы Сильфа представляют собой зеркальное отражение ходов пешки. Он ходит только вперед на одну клеточку по диагонали, и может брать только те фигуры на верхней доске, что стоят прямо перед ним, занимая место взятой фигуры. Таким образом, каждый раз, когда Сильф берет на верхней доске, цвет диагонали, вдоль которой они может ходить (без взятий), меняется с темного на светлый и наоборот. Золотые Сильфы начинают игру на светлых клетках второго ряда, малиновые Сильфы — на темных клетках седьмого ряда.  
 Помимо ходов и взятий на верхней доске, Сильф может взять расположенную прямо под ним вражескую фигуру на средней доске. Это единственный способ для Сильфа попасть на среднюю доску. На нижнюю доску он не может ни перейти, ни побить фигуру на ней. Единственный разрешенный ход для Сильфа на средней доске — вернуться на верхнюю доску. Сделать это он может либо походив прямо вверх на клетку, с которой спустился, либо став на одну из стартовых позиций Сильфов своего цвета. Сильф не может брать фигуры, когда ходит наверх — вернуться на верхнюю доску он может, только походив на незанятую клетку.
 
-Сильф, стоящий на 3c4 может походить на 3b5 или 3d5. Он может походить на 3c5 или 2c4, побив стоящую там фигуру, если она там есть. Взяв фигуру на 2c4, Сильф может следующим ходом вернуться на 3c4, если клетка останется незанятой, или же может походить на любую из незанятых стартовых клеток. Для золотого Сильфа разрешенными ходами будут на 3a2, 3c2, 3e2, 3g2, 3i2 и 3k2. 
+Сильф, стоящий на 3c4 может походить на 3b5 или 3d5. Он может походить на 3c5 или 2c4, побив стоящую там фигуру, если она там есть. Взяв фигуру на 2c4, Сильф может следующим ходом вернуться на 3c4, если клетка останется незанятой, или же может походить на любую из незанятых стартовых клеток. Для золотого Сильфа разрешенными ходами будут на 3a2, 3c2, 3e2, 3g2, 3i2 и 3k2.
 Достигший восьмого ряда на верхней доске Сильф уже не сможет ходить на этой доске, но сохраняет способность побить фигуру внизу. В этом случае, Сильф может восстановить мобильность на верхней доске, вернувшись после взятия фигуры на одну из стартовых позиций Сильфа своего цвета.
 
 ### Грифон (Griffon)
 
 [![Shah3](http://stormtower.ru/wp-content/uploads/2013/09/Shah3.jpg)](http://stormtower.ru/wp-content/uploads/2013/09/Shah3.jpg)
 
-Стартовые клеточки для золотых Грифонов 3c1 и 3k1; малиновые Грифоны начинают на 3c8 и 3k8. На верхней доске Грифон ходит на одну клетку по горизонтали или вертикали и на две клетки по диагонали. Подобно коню он может перескакивать занятые клетки, и бьет лишь фигуры, находящиеся в конечной клетке его хода, но не в промежуточных. (Ходит идентично слону в корейских шахматах). Грифон, стоящий на 3d4, может походить или побить фигуру на 3a2, 3b1, 3f1, 3g2, 3g6, 3f7, 3b7 или 3a6. 
-Кроме того, Грифон может перемещаться на среднюю доску, походив на одну из четырех клеточек по диагонали вниз. (Обратите внимание, что Грифон, стоящий у края верхней доски, может походить только на две клеточки на средней доске, а не на четыре.) Грифон возвращается на верхнюю доску, походив на любую из четырех (или двух) клеток по диагонали вверх относительно своего нынешнего положения. Он может перемещаться между верхней и средней досками, независимо от того, берется при этом фигура или нет. Грифон, стоящий на 3d4 может походить или побить на 2c5, 2c3, 2e3 или 2e5. 
+Стартовые клеточки для золотых Грифонов 3c1 и 3k1; малиновые Грифоны начинают на 3c8 и 3k8. На верхней доске Грифон ходит на одну клетку по горизонтали или вертикали и на две клетки по диагонали. Подобно коню он может перескакивать занятые клетки, и бьет лишь фигуры, находящиеся в конечной клетке его хода, но не в промежуточных. (Ходит идентично слону в корейских шахматах). Грифон, стоящий на 3d4, может походить или побить фигуру на 3a2, 3b1, 3f1, 3g2, 3g6, 3f7, 3b7 или 3a6.
+Кроме того, Грифон может перемещаться на среднюю доску, походив на одну из четырех клеточек по диагонали вниз. (Обратите внимание, что Грифон, стоящий у края верхней доски, может походить только на две клеточки на средней доске, а не на четыре.) Грифон возвращается на верхнюю доску, походив на любую из четырех (или двух) клеток по диагонали вверх относительно своего нынешнего положения. Он может перемещаться между верхней и средней досками, независимо от того, берется при этом фигура или нет. Грифон, стоящий на 3d4 может походить или побить на 2c5, 2c3, 2e3 или 2e5.
 Пока Грифон находится на средней доске, ему запрещено летать, и поэтому он может ходить и бить только на диагонально примыкающие клетки. Грифон, стоящий на 2e5, держит под ударом следующие клетки: 2f6, 2f4, 2d4, 2d6, 3f6, 3f4, 3d4 и 3d6.
 
 ### Дракон (Dragon)
@@ -152,13 +152,147 @@ tags:
 Из-за сложности игры на нескольких досках и различных способностях фигур в драконьих шахматах произвести абсолютную оценку фигур гораздо сложнее, чем в стандартных шахматах. В шахматах пешка стоит 1 очко, кони и слоны по 3, ладьи 5 и ферзи 9. (Если бы короля не был бесценным, тогда его способности ходить и бить фигуры оценивалась в 4 очка). Ниже приводятся приблизительные, относительные стоимости фигур драконьих шахмат, чтобы дать игрокам представление, какие размены выгодны, а какие нет.  
 Например, размен Героя на Грифона грубо равноценен, в то время как размен Василиска на Олифана в общем даст материальное преимущество игроку, оставшемуся без Василиска. Однако всегда следует помнить, что истинная «стоимость» фигуры в любой игровой ситуации зависит в первую очередь от положения фигуры и ее роли в игре, а не от теоретической способности ходить и бить.
 
-<table><tbody><tr><td><strong>Фигура</strong></td><td><strong>Стоимость</strong></td><td><strong>Фигура</strong></td><td><strong>Стоимость</strong></td></tr><tr><td>Король</td><td>**</td><td>Вор</td><td>4</td></tr><tr><td>Маг</td><td>11</td><td>Стихиаль</td><td>4</td></tr><tr><td>Паладин</td><td>10</td><td>Василиск</td><td>3</td></tr><tr><td>Священник</td><td>9</td><td>Единорог</td><td>2,5</td></tr><tr><td>Дракон</td><td>8</td><td>Карлик</td><td>2</td></tr><tr><td>Грифон</td><td>5</td><td>Сильф</td><td>1</td></tr><tr><td>Олифан</td><td>5</td><td>Воин</td><td>1</td></tr><tr><td>Герой</td><td>4,5</td><td></td><td></td></tr></tbody></table>
+<table>
+	<tbody>
+		<tr>
+			<td>
+				<strong>Фигура</strong>
+			</td>
+			<td>
+				<strong>Стоимость</strong>
+			</td>
+			<td>
+				<strong>Фигура</strong>
+			</td>
+			<td>
+				<strong>Стоимость</strong>
+			</td>
+		</tr>
+		<tr>
+			<td>Король</td>
+			<td>**</td>
+			<td>Вор</td>
+			<td>4</td>
+		</tr>
+		<tr>
+			<td>Маг</td>
+			<td>11</td>
+			<td>Стихиаль</td>
+			<td>4</td>
+		</tr>
+		<tr>
+			<td>Паладин</td>
+			<td>10</td>
+			<td>Василиск</td>
+			<td>3</td>
+		</tr>
+		<tr>
+			<td>Священник</td>
+			<td>9</td>
+			<td>Единорог</td>
+			<td>2,5</td>
+		</tr>
+		<tr>
+			<td>Дракон</td>
+			<td>8</td>
+			<td>Карлик</td>
+			<td>2</td>
+		</tr>
+		<tr>
+			<td>Грифон</td>
+			<td>5</td>
+			<td>Сильф</td>
+			<td>1</td>
+		</tr>
+		<tr>
+			<td>Олифан</td>
+			<td>5</td>
+			<td>Воин</td>
+			<td>1</td>
+		</tr>
+		<tr>
+			<td>Герой</td>
+			<td>4,5</td>
+			<td></td>
+			<td></td>
+		</tr>
+	</tbody>
+</table>
 
 \*\* В действительности Король не имеет цены, ибо с его утратой игра будет проиграна.
 
 В основном ходы в драконьих шахматах записываются так же, как в стандартных, но с определенными отличиями (объяснявшимися в начале статьи), вызванными отличными наименованиями фигур и наличием нескольких досок. Следующие примеры охватывают все ситуации, могущие возникнуть в игре:
 
-<table><tbody><tr><td>1) w2f3</td><td>Основной ход без взятия; запись 1 это первый ход без взятия, который может сделать золотой Воин, стоящий на 2f2. (Читается: «Воин ходить на 2f3»). В большинстве случаев, ходы без взятия можно записывать, просто назвав тип фигуры, которая ходит (W) и клетку, куда она ходит (2f3).</td></tr><tr><td>2)S/3e2-3d3</td><td>Когда несколько одинаковых фигур могут походить на эту клетку, конкретная фигура обозначается еще и номером клетки, с которой она ходит, отделенным от названия фигуры косой чертой. (Запись 2 читается: «Сильф на 3e2 ходит на 3d3). В этой записи дефис служит для отделения начальной позиции фигуры от конечной.</td></tr><tr><td>Пять способов записать взятие;</td></tr><tr><td>3) W2e3</td><td>правильный способ зависит от позиции фигур и, в некоторой мере, от предпочтений игроков. Запись 3 можно использовать, если только один Воин может походить на 2e3, и если этотход включает взятие.</td></tr><tr><td>4) Wx2e3</td><td>Запись 4 более конкретна, так как использует «х», чтобы обозначить взятие. (Читается: «Воин берет (не указано, какую фигуру) на 2e3».)</td></tr><tr><td>5) W/2d2x2e3</td><td>Запись 5 нужна, если больше одного Воина могут побитьна 2e3, опять таки, через косую черту (как в записи 2).</td></tr><tr><td>6) WxU2e3</td><td>Запись 6 включаетопределение взятой фигуры – в нашем случае, Единорога, стоявшего на 2e3.</td></tr><tr><td>7) WxU</td><td>Запись 6 включаетопределение взятой фигуры – в нашем случае, Единорога, стоявшего на 2e3.</td></tr><tr><td>8) W2f8(H)</td><td>Ход и превращение Воина. (Читается: «Воин ходит на 2f8 и превращается в Героя».)</td></tr><tr><td>9) Drx2c4</td><td>Дракон бьет издалека (Читается: «Дракон бьет (не указано, какуюфигуру) на 2 c 4».) Чтобы избежать режущего глаз сочетания «Drx», можно записать этот ход как «Dr2c4», поскольку любой ход Дракона, относящийсяк средней доске, может быть только взятием «издалека».</td></tr><tr><td>10) UxOch</td><td>Наглядное использование «ch» (шах), указывающее на ход, которым Королю противника ставится шах. (Читается: «Единорог берет Олифана иобъявляет шах».)</td></tr></tbody></table>
+<table>
+	<tbody>
+		<tr>
+			<td>1) w2f3</td>
+			<td>
+				Основной ход без взятия; запись 1 это первый ход без взятия, который может сделать золотой Воин, стоящий на 2f2.
+				(Читается: «Воин ходить на 2f3»). В большинстве случаев, ходы без взятия можно записывать, просто назвав тип
+				фигуры, которая ходит (W) и клетку, куда она ходит (2f3).
+			</td>
+		</tr>
+		<tr>
+			<td>2)S/3e2-3d3</td>
+			<td>
+				Когда несколько одинаковых фигур могут походить на эту клетку, конкретная фигура обозначается еще и номером
+				клетки, с которой она ходит, отделенным от названия фигуры косой чертой. (Запись 2 читается: «Сильф на 3e2 ходит
+				на 3d3). В этой записи дефис служит для отделения начальной позиции фигуры от конечной.
+			</td>
+		</tr>
+		<tr>
+			<td>Пять способов записать взятие;</td>
+		</tr>
+		<tr>
+			<td>3) W2e3</td>
+			<td>
+				правильный способ зависит от позиции фигур и, в некоторой мере, от предпочтений игроков. Запись 3 можно
+				использовать, если только один Воин может походить на 2e3, и если этотход включает взятие.
+			</td>
+		</tr>
+		<tr>
+			<td>4) Wx2e3</td>
+			<td>
+				Запись 4 более конкретна, так как использует «х», чтобы обозначить взятие. (Читается: «Воин берет (не указано,
+				какую фигуру) на 2e3».)
+			</td>
+		</tr>
+		<tr>
+			<td>5) W/2d2x2e3</td>
+			<td>
+				Запись 5 нужна, если больше одного Воина могут побитьна 2e3, опять таки, через косую черту (как в записи 2).
+			</td>
+		</tr>
+		<tr>
+			<td>6) WxU2e3</td>
+			<td>Запись 6 включаетопределение взятой фигуры – в нашем случае, Единорога, стоявшего на 2e3.</td>
+		</tr>
+		<tr>
+			<td>7) WxU</td>
+			<td>Запись 6 включаетопределение взятой фигуры – в нашем случае, Единорога, стоявшего на 2e3.</td>
+		</tr>
+		<tr>
+			<td>8) W2f8(H)</td>
+			<td>Ход и превращение Воина. (Читается: «Воин ходит на 2f8 и превращается в Героя».)</td>
+		</tr>
+		<tr>
+			<td>9) Drx2c4</td>
+			<td>
+				Дракон бьет издалека (Читается: «Дракон бьет (не указано, какуюфигуру) на 2 c 4».) Чтобы избежать режущего глаз
+				сочетания «Drx», можно записать этот ход как «Dr2c4», поскольку любой ход Дракона, относящийсяк средней доске,
+				может быть только взятием «издалека».
+			</td>
+		</tr>
+		<tr>
+			<td>10) UxOch</td>
+			<td>
+				Наглядное использование «ch» (шах), указывающее на ход, которым Королю противника ставится шах. (Читается:
+				«Единорог берет Олифана иобъявляет шах».)
+			</td>
+		</tr>
+	</tbody>
+</table>
 
 Прочие символы: dbl ch, dis ch и mate (мат), взятые из стандартных шахмат, обозначают специальные обстоятельства. Двойной шах (dbl ch) происходит, когда ход позволяет одной иили нескольким фигурам одновременно объявить шах. Замеченный шах (dis ch) происходит, когда ход одной фигуры открывает дорогу, позволяющую второй фигуре объявить шах. А «мат» он мат и есть — записывается на последнем ходу игры, когда Короля атакуют таким образом, что он никак не может уйти из-под боя.
 
@@ -198,9 +332,9 @@ tags:
 
 Журнал «Дракон» №100, август 1985.
 
-**Автор:** _Гэри Гигакс_  
+**Автор:** *Гэри Гигакс*
 
-**Перевод:** _Златолюб Роскошный_  
+**Перевод:** *Златолюб Роскошный*
 
 _Статья опубликована в журнале «Ночная Ведьма» №7, февраль 2010 г._
 
