--- a/src/content/posts/articles/generalized-downtime.mdx
+++ b/src/content/posts/articles/generalized-downtime.mdx
@@ -3,12 +3,10 @@ title: Обобщенные правила по простою
 description: Обобщенные правила по простою
 date: 2023-05-17
 tags:
-  - downtime
+  - Свободное время
 ---
 
-
 Набор правил для обработки любых действий, связанных с простоем, которые выполняются в течение длительного периода времени.
-
 
 ### Основные понятия
 
@@ -31,7 +29,7 @@ tags:
 Любая конкретная деятельность во время простоя имеет область действия, которая определяет количество прогресса, необходимого для ее завершения. **Масштаб** — это мера того, сколько времени и усилий требуется для выполнения задачи.
 
 | Масштаб     | Прогресс | Пример                                                                   |
-|-------------|----------|--------------------------------------------------------------------------|
+| ----------- | -------- | ------------------------------------------------------------------------ |
 | Узкий       | 3        | Ставим небольшую пьесу, мастерим безделушку                              |
 | Скромный    | 6        | Проведение тщательных исследований, создание простого оружия             |
 | Вовлеченный | 12       | Создание воинского оружия, Изучение нового инструмента                   |
@@ -48,14 +46,14 @@ tags:
 
 Для каждого приращения времени, когда вы выполняете действие, вы совершаете проверку характеристики, заданную задачей. КС проверки также определяется задачей.
 
-| Владение   | Масштаб          | КС | Расходы |
-|------------|------------------|----|---------|
-| Язык       | Сложный (18)     | 15 | 5 зм    |
-| Инструмент | Вовлеченный (12) | 15 | 10 зм   |
-| Навык      | Продвинутый (24) | 18 | 30 зм   |
-| Оружие     | Продвинутый (24) | 18 | 30 зм   |
-| Доспех     | Продвинутый (24) | 18 | 40 зм   |
-| Экспертиза | Гранд (32)       | 20 | 50 зм   |
+| Владение   | Масштаб          | КС  | Расходы |
+| ---------- | ---------------- | --- | ------- |
+| Язык       | Сложный (18)     | 15  | 5 зм    |
+| Инструмент | Вовлеченный (12) | 15  | 10 зм   |
+| Навык      | Продвинутый (24) | 18  | 30 зм   |
+| Оружие     | Продвинутый (24) | 18  | 30 зм   |
+| Доспех     | Продвинутый (24) | 18  | 40 зм   |
+| Экспертиза | Гранд (32)       | 20  | 50 зм   |
 
 ## Бонусы проверки
 
@@ -89,7 +87,6 @@ tags:
 
 Обучение предполагает изучение чего-то нового под руководством наставника.
 
-
 Если у вас нет по крайней мере 13 в характеристике, относящейся к определенному навыку, например Мудрости для восприятия или Силы для тяжелых доспехов, количество Прогресса, необходимого для завершения обучения, увеличивается на 3.
 
 **Язык.** Вы учитесь говорить, читать и писать на языке, который знает ваш наставник.
@@ -118,13 +115,13 @@ tags:
 
 Объем и КС, а также то, какая характерстика используется для проверки инструмента, для любого данного предмета определяется Мастером, поскольку перечисление этого для каждого возможного предмета потребовало бы огромного количества таблиц. Вот несколько примеров в качестве предложения:
 
-| Пример предмета    | Масштаб       | Инструмент                          | КС |
-|--------------------|---------------|-------------------------------------|----|
-| Антитоксин         | Узкий (3)     | Интеллект (набор травника)          | 12 |
-| Воинское оружие    | Участие (12)  | Сила (Инструменты кузнеца)          | 14 |
-| Латный доспех      | Комплекс (18) | Сила (Инструменты кузнеца)          | 16 |
-| Алхимический огонь | Скромный (6)  | Интеллект (Принадлежности алхимика) | 18 |
-| Базовый яд         | Узкий (3)     | Интеллект (набор отравителя)        | 12 |
+| Пример предмета    | Масштаб       | Инструмент                          | КС  |
+| ------------------ | ------------- | ----------------------------------- | --- |
+| Антитоксин         | Узкий (3)     | Интеллект (набор травника)          | 12  |
+| Воинское оружие    | Участие (12)  | Сила (Инструменты кузнеца)          | 14  |
+| Латный доспех      | Комплекс (18) | Сила (Инструменты кузнеца)          | 16  |
+| Алхимический огонь | Скромный (6)  | Интеллект (Принадлежности алхимика) | 18  |
+| Базовый яд         | Узкий (3)     | Интеллект (набор отравителя)        | 12  |
 
 **Совместная работа.** Для изготовления большинства предметов требуется только один персонаж. Тем не менее, для создания предметов с высоким Масштабом может потребоваться как минимум два или три мастера, каждый из которых обладает необходимыми навыками работы с инструментами, для совместной работы над предметом. Дополнительные руки могут помочь в работе, до определенного момента. Если над проектом работает в два раза больше мастеров (по сравнению с минимумом, то есть 2 для большинства предметов, 4, если требуется двое и т. д.), то проверка характеристики с инструментом для определения Прогресса совершается с преимуществом. Дополнительные помощники эффект не оказывают.
 
@@ -134,13 +131,13 @@ tags:
 
 Для написания свитков используются проверки Интеллекта (Магия), в то время как другие расходные предметы используют соответствующие инструменты. Чтобы написать свиток, персонаж должен иметь любые материальные компоненты, необходимые для сотворения заклинания, и должен знать заклинание или подготовить его на время проекта.
 
-| Редкость    | Масштаб          | КС | Расходы        |
-|-------------|------------------|----|----------------|
-| Общий       | Узкий (3)        | 12 | 25 золотых     |
-| Необычный   | Скромный (6)     | 14 | 100 золотых    |
-| Редкий      | Участие (12)     | 16 | 1000 золотых   |
-| Очень редко | Комплекс (18)    | 18 | 10 000 золотых |
-| Легендарный | Продвинутый (24) | 20 | 50 000 золотых |
+| Редкость    | Масштаб          | КС  | Расходы        |
+| ----------- | ---------------- | --- | -------------- |
+| Общий       | Узкий (3)        | 12  | 25 золотых     |
+| Необычный   | Скромный (6)     | 14  | 100 золотых    |
+| Редкий      | Участие (12)     | 16  | 1000 золотых   |
+| Очень редко | Комплекс (18)    | 18  | 10 000 золотых |
+| Легендарный | Продвинутый (24) | 20  | 50 000 золотых |
 
 **Постоянные магические предметы.** Создание магических предметов, таких как волшебное оружие или кольца, — сложный процесс, требующий не только времени и материалов. Эти предметы требуют сочетания навыков как в ремесле, так и в магии. Один персонаж, владеющий соответствующим инструментом и владеющий Магией, может выполнить задачу самостоятельно, но чаще заклинатель и ремесленник работают вместе над созданием предмета, каждый из которых вносит свою половину необходимых знаний. За каждый интервал времени выполняются две проверки: одна с помощью инструмента, а другая с помощью Магии. Используйте меньший из двух результатов, чтобы определить достигнутый прогресс.
 
