--- a/src/content/posts/articles/mechi-i-koldovstvo.mdx
+++ b/src/content/posts/articles/mechi-i-koldovstvo.mdx
@@ -2,8 +2,8 @@
 title: Мечи и колдовство
 description: Заметки про домашние правила
 date: 2021-03-05
-tags: 
-  - Сражение
+tags:
+  - Сражения
   - Кормир
   - Снаряжение
   - Homebrew
@@ -22,38 +22,38 @@ tags:
 это и стиль боя двумя оружиями, и последствия падения в 0 хитов, и даже возможность защититься от уже успешного попадания по себе - приняв удар на щит.
 
 ### **Fighting with two weapons**
+
+> _Variant_
 >
->_Variant_
->
-> Standard rules for fighting with two weapons make it useless for ranger (who must use bonus action to get benefits of Hunter’s Mark) and fighter after 11 level. So, this variant rule fixes this problem – freeing bonus action and creating synergy effect of Action Surge for fighter. 
+> Standard rules for fighting with two weapons make it useless for ranger (who must use bonus action to get benefits of Hunter’s Mark) and fighter after 11 level. So, this variant rule fixes this problem – freeing bonus action and creating synergy effect of Action Surge for fighter.
 > When you take the Attack action and attack with a melee weapon, that not have heavy property, or light ranged weapon that you're holding in one hand, you can use a bonus action to attack with a different light weapon that you're holding in the other hand. You don't add your ability modifier to the damage of the bonus attack, unless that modifier is negative.
 > If either weapon has the thrown property, you can throw the weapon, instead of making a melee attack with it.
 > If later you receive ability to make Extra attacks, then you make first attack with off-hand weapon as part of Attack action and still can make second attack with off-hand weapon as a bonus action.
 
 ### **Extra attack in multiclassing (variant)**
-> 
+
 > _Variant_
-> 
+>
 > If you have two or more classes (or archetypes) with class feature Extra Attack, then you can gain benefit of this class feature even if any one of your classes do not have enough levels to get it. If your total levels of classes with class feature Extra Attack is more than 7 then you can use Extra Attack.
-> 
+>
 > Also, the only one way to get second feature Extra Attack (to make 3 weapon attacks as action) is to get 11 levels of Fighter.
-> 
+>
 > If you have two sources of Extra Attack class feature – you can take another fighting style.
 
 ### **Rogue Sneak Attack**
-> 
+
 > _Variant_
-> 
+>
 > Rogue can make sneak attacks with ranged, finesse or light weapons.
 
-###  **Blocking Shield**
-> 
+### **Blocking Shield**
+
 > When you are hit by weapon attack but before you know damage dealt you can block this incoming damage with your shield as a reaction.
-> 
+>
 > _Reaction_, _Shield_
-> 
+>
 > Then the shield will take all damage dealt and if damage dealt is more then shield’s hit points maximum you will take rest damage.
-> 
+>
 > Shield as a object has next characteristics: hit points 15, damage threshold 5.
 
 ## Второй блок
@@ -129,19 +129,19 @@ tags:
 
 ВОССТАНОВЛЕНИЕ ХИТОВ ЕСТЕСТВЕННЫМ ОБРАЗОМ
 
-| ОТДЫХ                            | ХИТЫ                                             | КОСТИ ХИТОВ                              |
-|----------------------------------|--------------------------------------------------|------------------------------------------|
-| Короткий                         | За счет потраченных Костей Хитов, максимум 1 КХ* | Не восстанавливаются                     |
-| Короткий + первая помощь         | Количество потраченных КХ увеличивается на 1**   | Не восстанавливаются                     |
-| Средний                          | Уровень + модификатор Телосложения*              | 1 Кость Хитов                            |
-| Средний + первая помощь          | Уровень + модификатор Телосложения*              | 2 Кости Хитов                            |
-| Средний + врачебный уход         | Уровень + модификатор Телосложения*              | 1+Модификатор Телосложения, Минимум 2    |
-| Длинный                          | Уровень + модификатор Телосложения*              | 1+Модификатор Телосложения КХ            |
-| Длинный + первая помощь          | Уровень + модификатор Телосложения*              | 1+Модификатор Телосложения КХ, Минимум 2 |
-| Длинный + врачебный уход         | Уровень + модификатор Телосложения*              | 1+Модификатор Телосложения, Минимум 3    |
-| Продолжительный                  | значение Телосложения****                        | Суммарно не менее четверти КХ            |
-| Продолжительный + первая помощь  | значение Телосложения****                        | Суммарно не менее четверти КХ            |
-| Продолжительный + врачебный уход | значение Телосложения****                        | Суммарно не менее половины КХ            |
+| ОТДЫХ                            | ХИТЫ                                              | КОСТИ ХИТОВ                              |
+| -------------------------------- | ------------------------------------------------- | ---------------------------------------- |
+| Короткий                         | За счет потраченных Костей Хитов, максимум 1 КХ\* | Не восстанавливаются                     |
+| Короткий + первая помощь         | Количество потраченных КХ увеличивается на 1\*\*  | Не восстанавливаются                     |
+| Средний                          | Уровень + модификатор Телосложения\*              | 1 Кость Хитов                            |
+| Средний + первая помощь          | Уровень + модификатор Телосложения\*              | 2 Кости Хитов                            |
+| Средний + врачебный уход         | Уровень + модификатор Телосложения\*              | 1+Модификатор Телосложения, Минимум 2    |
+| Длинный                          | Уровень + модификатор Телосложения\*              | 1+Модификатор Телосложения КХ            |
+| Длинный + первая помощь          | Уровень + модификатор Телосложения\*              | 1+Модификатор Телосложения КХ, Минимум 2 |
+| Длинный + врачебный уход         | Уровень + модификатор Телосложения\*              | 1+Модификатор Телосложения, Минимум 3    |
+| Продолжительный                  | значение Телосложения\*\*\*\*                     | Суммарно не менее четверти КХ            |
+| Продолжительный + первая помощь  | значение Телосложения\*\*\*\*                     | Суммарно не менее четверти КХ            |
+| Продолжительный + врачебный уход | значение Телосложения\*\*\*\*                     | Суммарно не менее половины КХ            |
 
 _\* Если отсутствует меньше половины хитов._
 
@@ -218,12 +218,11 @@ _Если у персонажа есть состояние Ранен \[Bloodie
 Персонаж не может получить преимущества от второго длинного или среднего отдыха за 24-часовой период, и у персонажа должен быть хотя бы 1 хит в начале отдыха, чтобы получить от него преимущества.
 
 > _Совет Мастеру
-> _
-> _Длинный (или средний) отдых – это прекрасная возможность спросить у персонажей, которые вместе несут дозор «Про что вы разговариваете» и вдохновить игроков на дополнительный отыгрыш. Конечно, когда вы спросите у игроков в первый раз – они скорее всего не ответят или будут себя чувствовать некомфортно. Но если вы будете последовательным и будете задавать этот вопрос постоянно, игроки начнут рассказывать, что делают их персонажи и про что говорят._
+> _ > _Длинный (или средний) отдых – это прекрасная возможность спросить у персонажей, которые вместе несут дозор «Про что вы разговариваете» и вдохновить игроков на дополнительный отыгрыш. Конечно, когда вы спросите у игроков в первый раз – они скорее всего не ответят или будут себя чувствовать некомфортно. Но если вы будете последовательным и будете задавать этот вопрос постоянно, игроки начнут рассказывать, что делают их персонажи и про что говорят._
 
 > **Опциональное правило: Сокращенное восстановление хитов.**
-> 
-> За период длительного отдыха персонаж восстанавливает 1+модификатор Телосложения костей хитов, но не более половины максимума костей хитов._
+>
+> За период длительного отдыха персонаж восстанавливает 1+модификатор Телосложения костей хитов, но не более половины максимума костей хитов.\_
 
 ### 💤🧭Продолжительный отдых
 
