--- a/src/content/posts/articles/mission-generator.mdx
+++ b/src/content/posts/articles/mission-generator.mdx
@@ -3,9 +3,9 @@ title: 'Генератор заданий'
 description: 'Простой генератор заданий для авантюристов, который тем не менее покрывает практически все возможные варианты'
 date: 2023-05-14
 tags:
-  - 'Задания'
-  - 'Генератор'
-  - 'Ресурс'
+  - Задания
+  - Генераторы
+  - Ресурсы
 ---
 
 Инструмент который позволит создавать различные задания для вашей группы авантюристов.
