--- a/src/content/posts/articles/sea-of-fallen-stars.mdx
+++ b/src/content/posts/articles/sea-of-fallen-stars.mdx
@@ -1,9 +1,9 @@
 ---
 title: Море Упавших Звезд
-description: Побережье Моря Упавших Звезд от Скардэйла в Долинах до южного края Рогов Бури в Кормире можно разделить на несколько регионов. 
+description: Побережье Моря Упавших Звезд от Скардэйла в Долинах до южного края Рогов Бури в Кормире можно разделить на несколько регионов.
 date: 2019-05-17
-tags: 
-  - Море Упавщних Звезд
+tags:
+  - Forgotten Realms
 ---
 
 Побережье Моря Упавших Звезд от Скардэйла в Долинах до южного края Рогов Бури в Кормире можно разделить на несколько регионов. Заметим, что деление довольно обобщенное, и характерные черты одного региона могут встречаться и в других местах побережья.
