--- a/src/content/posts/core-d20/martial-traditions.mdx
+++ b/src/content/posts/core-d20/martial-traditions.mdx
@@ -6,7 +6,7 @@ tags:
   - Core d20 RPG
   - Homebrew
   - Черты
-  - Бой
+  - Сражения
 ---
 
 **Черты для школ боевых искусств с использованием боевых приемов и техник (большое хоумбрю) - перевод из Palant Notes to Combat**
