--- a/src/content/posts/core-d20/modified-two-weapons.mdx
+++ b/src/content/posts/core-d20/modified-two-weapons.mdx
@@ -1,18 +1,18 @@
 ---
-title: "[Core d20 RPG] Модифицированное правило сражения двумя оружиями"
+title: '[Core d20 RPG] Модифицированное правило сражения двумя оружиями'
 description: Правила по сражению двумя оружиями в пятой редакции
-date: "2021-09-05"
-tags: 
-  - "Core d20 RPG"
-  - "Homebrew"
-  - "сражение"
+date: 2021-09-05
+tags:
+  - Core d20 RPG
+  - Homebrew
+  - Сражения
 ---
 
 Общеизвестно что правила по сражению двумя оружиями в пятой редакции далеки от идеала и мы предприняли попытку их улучшить. Если вам понравилось эта модификация правил - обязательно скажите нам об этом в комментариях. Впрочем, если не понравилось, то не менее обязательно расскажите, что именно не понравилось
 
 Модифицированное правило по сражению двумя оружиями позволяет использовать пару шпагу и кинжал без черты Dual Wielder, позволяет для персонажей-корсаров использовать пару сабля и ручной арбалет, опциональное правило даже позволяет стрелять из двух легких арбалетов без наличия черты.
 
-Также модифицированное правило позволяет воину с двумя оружиями использовать потенциал этого стиля при Всплеске действий и позволяет варвару с его яростью и рейнджеру с меткой охотника использовать два оружия уже в первом раунде сражения одновременно активируя ключевые классовые особенности.  
+Также модифицированное правило позволяет воину с двумя оружиями использовать потенциал этого стиля при Всплеске действий и позволяет варвару с его яростью и рейнджеру с меткой охотника использовать два оружия уже в первом раунде сражения одновременно активируя ключевые классовые особенности.
 
 ## СРАЖЕНИЕ ДВУМЯ ОРУЖИЯМИ
 
