--- a/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotchika-srazhenie-1.mdx
+++ b/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotchika-srazhenie-1.mdx
@@ -1,12 +1,11 @@
 ---
 title: 'Мысли вслух. Дневник разработчка, Сражение, часть 1'
 description: Заметки Паланта про сражение
-date: '2023-02-11'
-tags: 
-  - 'Core d20 RPG'
-  - 'E5E'
-  - 'Мысли вслух'
-  - 'Сражение'
+date: 2023-02-11
+tags:
+  - Core d20 RPG
+  - Мысли вслух
+  - Сражения
 ---
 
 Поскольку в данный момент работаю я все-таки над элементами сражения, то и говорить надо про само сражение.
@@ -59,5 +58,4 @@ tags:
 
 В следующей части: про действия, состояния, гранатоподобное метательное оружие, сражение верхом, базовые боевые приемы.
 
-  
 И небольшой анонс для патронов и внутреннего круга (Inner Sanctum) - более детально поговорить про мои домашние правила мы можем в дискорде в любой вечер. Если заинтересованы - пишите. И спасибо вам.
