--- a/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotchika-srazhenie-boevoj-duh.mdx
+++ b/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotchika-srazhenie-boevoj-duh.mdx
@@ -1,12 +1,12 @@
 ---
 title: 'Мысли вслух. Дневник разработчка, Боевой дух'
 description: 'Заметки Паланта про сражение'
-date: '2023-02-11'
-tags: 
-  - 'Core d20 RPG'
-  - 'Мысли вслух'
-  - 'Сражение'
-  - 'Боевой дух'
+date: 2023-02-11
+tags:
+  - Core d20 RPG
+  - Мысли вслух
+  - Сражения
+  - Боевой дух
 ---
 
 Боевой дух – базовая механика в старых редакциях и является хорошим способом определения поведения существ в сражении.
@@ -18,7 +18,7 @@ tags:
 Показатели боевого духа соответствуют следующим значениям боевого духа:
 
 | Показатель    | Значение      | Модификатор |
-|---------------|---------------|-------------|
+| ------------- | ------------- | ----------- |
 | Колеблющийся  | 3             | -4          |
 | Колеблющийся  | 4-5           | -3          |
 | Ненадежный    | 6-7           | -2          |
@@ -35,7 +35,7 @@ tags:
 В следующей таблице приведены примеры показателей и значений боевого духа для существ и неигровых персонажей. Эти примерные показатели и значения могут быть изменены, если у существа есть исключительный командир или дрессировщик, оно особенно предано делу или лидеру, с ним плохо обращаются и т. д.
 
 | Существо                                    | Боевой дух         |
-|---------------------------------------------|--------------------|
+| ------------------------------------------- | ------------------ |
 | Животное, послушное                         | Колеблющийся (3)   |
 | Животное, хищник                            | Неустойчивый ( 8 ) |
 | Животное, обученное бою                     | Средний (11)       |
@@ -71,7 +71,7 @@ tags:
 Мировоззрение: Законные, а также добрыеНИП, как правило, более лояльны по отношению к своим работодателям или хозяевам. И наоборот, хаотичные и/или злые НИП, как правило, думают о достижении своих собственных целей и задач, часто за счет других, и становятся менее верными слугами.
 
 | Разница в мировоззрении между НИП и хозяином  | Модификатор |
-|-----------------------------------------------|-------------|
+| --------------------------------------------- | ----------- |
 | Такой же                                      | 2           |
 | Отличается на 1 шаг по любой из осей          | ± 0         |
 | Отличается на 2 или более шагов по обеим осям | -2          |
@@ -79,7 +79,7 @@ tags:
 Кроме того, НИП, как правило, более лояльны к тем, кто разделяет их убеждения и ценности, как показано в следующей таблице:
 
 | Боевой дух (значение) | Модификатор мировоззрения НИП |
-|-----------------------|-------------------------------|
+| --------------------- | ----------------------------- |
 | Законный              | 1                             |
 | Хаотический           | -1                            |
 | Злой                  | -1                            |
@@ -88,7 +88,7 @@ tags:
 Отношение: Отношение существа или НИП к своему наставнику или лидеру может меняться со временем, в зависимости от того, как относятся к этому существу или НИП. Существа и НИП, с которыми обращаются жестоко или капризно со временем они перестанут любить или ненавидеть своих хозяев, в то время как те, с кем обращаются доброжелательно и/или справедливо, будут становиться все более лояльными.
 
 | Отношение НИП к своему хозяину | Модификатор |
-|--------------------------------|-------------|
+| ------------------------------ | ----------- |
 | Предпочтительный               | 3           |
 | Доброжелательность             | 1           |
 | Нейтральный                    | ±0          |
@@ -98,7 +98,7 @@ tags:
 Тип службы: Наемники, как правило, менее лояльны, чем последователи и приверженцы, в то время как приверженцы, из-за их тесной личной связи со своим хозяином, являются наиболее лояльным типом NPC. Добавьте применимый модификатор из следующей таблицы:
 
 | Вид службы    | Модификатор в зависимости от вида службы |
-|---------------|------------------------------------------|
+| ------------- | ---------------------------------------- |
 | Приверженец   | 3                                        |
 | Последователь | 1                                        |
 | Наемник       | ±0                                       |
@@ -124,7 +124,7 @@ tags:
 **Проверка боевого духа КC = 10 + модификаторы**
 
 | Обстоятельства                                         | Модификатор КС |
-|--------------------------------------------------------|----------------|
+| ------------------------------------------------------ | -------------- |
 | 25% союзных войск (или хитов) потеряно                 | 1              |
 | 50% союзных войск (или хитов) теряются                 | 3              |
 | Брошен союзниками                                      | 5              |
@@ -136,6 +136,6 @@ tags:
 | Лидер убит или иным образом потерян                    | 5              |
 | Численность противников 3 или более к 1                | -5             |
 | Превосходят противников в чисденности 3 или более до 1 | 5              |
-| Невозможно воздействовать на противников*              | 10             |
+| Невозможно воздействовать на противников\*             | 10             |
 
 Эта статья является частью раздела Сражения, который доступен для плейтеста - [CORE D20 ROLEPLAYING GAME V010 rev007 10022023 alpha.docx](https://1drv.ms/w/s!Atcrhwwo1lBA2PEBCh8cAFe8b9SVFQ?e=FoND8Y)
