--- a/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotki-puteshestviya-i-issledovaniya-chast-2.mdx
+++ b/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotki-puteshestviya-i-issledovaniya-chast-2.mdx
@@ -1,12 +1,11 @@
 ---
-title: "[Core d20 RPG] Мысли вслух. Дневник разработки. Путешествия и исследования, часть 2"
+title: '[Core d20 RPG] Мысли вслух. Дневник разработки. Путешествия и исследования, часть 2'
 date: 2023-02-22
 description: 'Про путешествия'
-tags: 
-  - 'Core d20 RPG'
-  - 'E5E'
-  - 'hexcrawlх'
-  - 'Путешествие'
+tags:
+  - Core d20 RPG
+  - Hexcrawl
+  - Путешествия
 ---
 
 В прошлый раз мы говорили о том, что хотим сделать в этом разделе правил и из чего он должен состоять. Но плотно работая над вопросом исследований и путешествий, решил поменять парадигму.
@@ -28,13 +27,9 @@ tags:
 Но описанные четыре вида деятельности в целом и описывают все что в целом необходимо:
 
 - Ориентирование на местности
-    
 - Поиск и обнаружение
-    
 - Скрытное передвижение
-    
 - Сбор провизии (фуражировка)
-    
 
 А связь с аспектом скорости и временем задается через темп путешествия, который позволяет перемещаться либо быстро, но у всех на виду и используя невосстанавливаемые ресурсы, либо медленно, но будучи незаметным и поддерживая себя доступными в местности ресурсами.
 
