--- a/src/content/posts/core-d20/tiers-different-approach.mdx
+++ b/src/content/posts/core-d20/tiers-different-approach.mdx
@@ -1,15 +1,12 @@
 ---
 title: '[Core d20 RPG] Мысли вслух. Дневник разработчика. Про изменение подхода к этапам игры'
 description: 'Заметки Паланта про то чем отличаются этапы игры'
-date: '2023-03-03'
-tags: 
-  - 'Core d20 RPG'
-  - 'E5E'
-  - 'Мысли вслух'
-  - 'Этапы игры'
+date: 2023-03-03
+tags:
+  - Core d20 RPG
+  - Мысли вслух
+  - Этапы игры
 ---
-
- 
 
 В рамках работы над **Исследованием и Путешествиями** для **Core d20 RPG** изменил стандартный подход к созданию угроз. Измененные значения приведены в таблицах ниже.
 
@@ -17,11 +14,10 @@ tags:
 
 Чтобы определить КС и урон от угроз и опасностей используйте следующими таблицами.
 
- 
-
 ## КС и уровень опасности угрозы
+
 | Уровень опасности | КС    |
-|-------------------|-------|
+| ----------------- | ----- |
 | Нормальный        | 10-15 |
 | Серьёзный         | 15-20 |
 | Смертельный       | 20-25 |
@@ -29,7 +25,7 @@ tags:
 ## Урон в зависимости от уровня
 
 | Уровень | Этап       | Нормальный | Серьёзный | Смертельный |
-|---------|------------|------------|-----------|-------------|
+| ------- | ---------- | ---------- | --------- | ----------- |
 | 1-4     | Ученик     | 1к10       | 2к10      | 4к10        |
 | 5-8     | Авантюрист | 2к10       | 4к10      | 10к10       |
 | 9-12    | Ветеран    | 3к10       | 6к10      | 14к10       |
