--- a/src/content/posts/articles/death-massive-damage.mdx
+++ b/src/content/posts/articles/death-massive-damage.mdx
@@ -1,11 +1,11 @@
 ---
-title: Порог массивного урона при игре в жанре Low fantasy 
-description: Вариантное правило массивного урона
+title: Порог массивного урона при игре в жанре Low Fantasy
+description: Вариант правил массивного урона
 date: 2023-05-17
 tags:
-- Homebrew
-- Core d20 RPG
-- Массивный урон
+  - Homebrew
+  - Core d20 RPG
+  - Урон
 ---
 
 ## Смертельный порог массивного урона.
