--- a/src/content/posts/articles/excel-resources.mdx
+++ b/src/content/posts/articles/excel-resources.mdx
@@ -1,10 +1,9 @@
 ---
-title:  'Ресурсы в Excel на английском и русском'
+title: 'Ресурсы в Excel на английском и русском'
 description: 'Подборка ресурсов в Excel на английском и русском'
 date: 2019-11-12
-tags: 
-  - 'Excel'
-  - 'Ресурс'
+tags:
+  - Ресурсы
 ---
 
 Неплохой лист персонажа
@@ -12,8 +11,6 @@ tags:
 [Dwyvipe-Character-Sheet-FF01.0](https://cyborgsandmages.com/wp-content/uploads/2019/11/Dwyvipe-Character-Sheet-FF01.0.xlsx)[Скачать](https://cyborgsandmages.com/wp-content/uploads/2019/11/Dwyvipe-Character-Sheet-FF01.0.xlsx)
 
 Генератор всяческой всячины в Excel
-
-
 
 [Random-Resource](https://cyborgsandmages.com/wp-content/uploads/2019/11/Random-Resource.xlsm)[Скачать](https://cyborgsandmages.com/wp-content/uploads/2019/11/Random-Resource.xlsm)
 
@@ -27,15 +24,15 @@ tags:
 
 Заклинания на русском языке по классам
 
-[DnD\_5\_v1.48d](https://cyborgsandmages.com/wp-content/uploads/2019/11/DnD_5_v1.48d.xlsx)[Скачать](https://cyborgsandmages.com/wp-content/uploads/2019/11/DnD_5_v1.48d.xlsx)
+[DnD_5_v1.48d](https://cyborgsandmages.com/wp-content/uploads/2019/11/DnD_5_v1.48d.xlsx)[Скачать](https://cyborgsandmages.com/wp-content/uploads/2019/11/DnD_5_v1.48d.xlsx)
 
 Расчет и создание статблоков чудовищ
 
 [Monster-Builder-with-Card-V1.4](https://cyborgsandmages.com/wp-content/uploads/2019/11/Monster-Builder-with-Card-V1.4.xlsx)[Скачать](https://cyborgsandmages.com/wp-content/uploads/2019/11/Monster-Builder-with-Card-V1.4.xlsx)
 
-[Monster\_Stat\_Calculator](https://cyborgsandmages.com/wp-content/uploads/2019/11/Monster_Stat_Calculator.xlsx)[Скачать](https://cyborgsandmages.com/wp-content/uploads/2019/11/Monster_Stat_Calculator.xlsx)
+[Monster_Stat_Calculator](https://cyborgsandmages.com/wp-content/uploads/2019/11/Monster_Stat_Calculator.xlsx)[Скачать](https://cyborgsandmages.com/wp-content/uploads/2019/11/Monster_Stat_Calculator.xlsx)
 
-[Monster\_Statistics\_Calculator](https://cyborgsandmages.com/wp-content/uploads/2019/11/Monster_Statistics_Calculator.xlsx)[Скачать](https://cyborgsandmages.com/wp-content/uploads/2019/11/Monster_Statistics_Calculator.xlsx)
+[Monster_Statistics_Calculator](https://cyborgsandmages.com/wp-content/uploads/2019/11/Monster_Statistics_Calculator.xlsx)[Скачать](https://cyborgsandmages.com/wp-content/uploads/2019/11/Monster_Statistics_Calculator.xlsx)
 
 Генератор магазинов с содержимым
 
@@ -45,11 +42,11 @@ tags:
 
 [Travelling-Merchants](https://cyborgsandmages.com/wp-content/uploads/2019/11/Travelling-Merchants.xlsx)[Скачать](https://cyborgsandmages.com/wp-content/uploads/2019/11/Travelling-Merchants.xlsx)
 
-* * *
+---
 
 Глубоководье в таблицах
 
-[waterdeep\_tables\_v.0.84](https://cyborgsandmages.com/wp-content/uploads/2019/11/waterdeep_tables_v.0.84.xlsx)[Скачать](https://cyborgsandmages.com/wp-content/uploads/2019/11/waterdeep_tables_v.0.84.xlsx)
+[waterdeep_tables_v.0.84](https://cyborgsandmages.com/wp-content/uploads/2019/11/waterdeep_tables_v.0.84.xlsx)[Скачать](https://cyborgsandmages.com/wp-content/uploads/2019/11/waterdeep_tables_v.0.84.xlsx)
 
 Врата Балдура в таблицах
 
