--- a/src/content/posts/articles/nerath.mdx
+++ b/src/content/posts/articles/nerath.mdx
@@ -2,9 +2,8 @@
 title: 'Nerath - История и обзор Nentir Vale'
 description: 'Nerath - История и обзор Nentir Vale'
 date: 2021-07-10
-tags: 
-  - 'Nentir Vale'
-  - 'Nerath'
+tags:
+  - Forgotten Realms
 ---
 
 ZeromaruX - один из поклонников D&D скомпилировал и создал на основании материалов четвертой редакции два интересных документа:
