--- a/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotchika-snaryazhenie-avantyurista-2.mdx
+++ b/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotchika-snaryazhenie-avantyurista-2.mdx
@@ -1,14 +1,12 @@
 ---
 title: '[Core d20 RPG] Мысли вслух. Дневник разработчика. Снаряжение авантюриста, часть 2'
-date: '2023-03-09'
+date: 2023-03-09
 description: 'Заметки Паланта про снаряжение авантюриста. Вторая но не последняя статья'
-tags: 
-  - 'Core d20 RPG'
-  - 'E5E'
-  - 'Мысли вслух'
-  - 'Снаряжение'
+tags:
+  - Core d20 RPG
+  - Мысли вслух
+  - Снаряжение
 ---
- 
 
 Продолжим…
 
