--- a/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotchika-snaryazhenie-dospehi-chast-1.mdx
+++ b/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotchika-snaryazhenie-dospehi-chast-1.mdx
@@ -1,12 +1,11 @@
 ---
 title: '[Core d20 RPG] Мысли вслух. Дневник разработчика. Снаряжение авантюриста, доспехи, часть 1'
 description: 'Заметки Паланта про снаряжение авантюриста. Доспехи. Очередная но не последняя статья'
-date: '2023-03-10'
-tags: 
-  - 'Core d20 RPG'
-  - 'E5E'
-  - 'Мысли вслух'
-  - 'Снаряжение'
+date: 2023-03-10
+tags:
+  - Core d20 RPG
+  - Мысли вслух
+  - Снаряжение
 ---
 
 Раздел правил посвященный доспехам в главе снаряжения пятой редакции не сказать, чтобы сильно баловал игроков содержимым. Изначально игрокам предлагается три вида доспехов – легкие, средние и тяжелые, один вид щита, немного дополнительных правил по одеванию / сниманию доспехов и самое общее описание доспехов.
@@ -36,8 +35,6 @@ tags:
 - Вес
 - Стоимость
 
- 
-
 Очевидно, что многие из этих свойств легко записывать в виде ключевых слов в описании доспеха. Например:
 
 \- кожаный доспех, _легкий_, _КЗ 11_
@@ -45,8 +42,6 @@ tags:
 \- чешуйчатый доспех, _средний, КЗ 14, Максимальный бонус Ловкости +2, помеха (Скрытность)_
 
 \- кольчуга, _тяжелый, КЗ 16, Минимальная Сила 13, помеха Скрытность._
-
- 
 
 При этом также легко увидеть, что для доспехов могут быть характерны и другие свойства, которые также можно выразить через ключевые слова. Так, более полный перечень свойств доспеха может быть записан следующим образом.
 
@@ -86,18 +81,12 @@ tags:
 
 Дополнительно, в описании может указываться нанесение эмблемы святого символа на щит или доспех для паладинов и клериков, позволяя использовать доспех или щит как божественный заклинательный фокус.
 
- 
-
- 
-
 По аналогии со свойствами оружия мы поэтому вводим следующие свойства доспехов:
 
 - **Класс Защиты (Х).** Доспех устанавливает ваш Класс Защиты равным значению указанному в скобках. Если значение указано со знаком «+», то это бонус к Классу Защиты и прибавляется к любой базовой формуле расчета Класса Защиты.
 - **Максимальный бонус Ловкости (Х).** Используемая в расчете Класса Защиты Ловкость ограничена доспехом. Максимум к КЗ вы можете добавить значение указанное в скобках.
 - **Шумный.** Этот тип доспеха снижает вашу способность бесшумно передвигаться из-за ударов металлических компонентов друг о друга. Когда вы носите Шумный доспех, вы получаете помеху на любые проверки Скрытности, которые вы совершаете, чтобы передвигаться бесшумно. Другие ситуации, такие как возможность спрятаться будучи неподвижным или в условиях магической тишины, остаются на усмотрение Мастера.
 - **Весомый (Х).** Если ваша Сила меньше значения указанного в скобках, то ваша скорость уменьшается на 1/3.
-
- 
 
 - **Греющий.** Этот вид доспеха считается комплектом теплой одежды для целей определения воздействия холодной погоды.
 - **Греющийся.** В жарком климате персонаж должен пить больше воды. В таких доспехах персонаж пить в 1,5 раза больше воды, чем обычно.
@@ -112,15 +101,9 @@ tags:
 - **Уменьшение урона (Х/Y).** При ношении этого доспеха весь урон от атак оружием указанного типа уменьшается на величину, указанную в скобках.
 - **Шипованный.** Если вы владеете воинским оружием, вы можете бонусным действием атаковать шипами или лезвиями установленными на вашем доспехе или щите. Эта атака оружием ближнего боя наносит 1к4 колющего урона.
 
- 
-
 ## Легкие доспехи
 
- 
-
 В базовых правилах представлены padded, leather, studded leather легкие доспехи. Для легких доспехов мы добавляем три варианта, один из которых является модульным. При этом диапазон базового Класса Защиты для легких доспехов теперь будет изменяться от 11 до 13 без учета Ловкости, позволяя персонажам, зависящим от Ловкости все еще иметь варианты для изменения своего снаряжения.
-
- 
 
 **Кожаный доспех.** Нагрудник и наплечники этого доспеха сделаны из кожи, которая была усилена варкой в масле. Остальные доспехи выполнены из более мягких и гибких материалов.
 
@@ -133,7 +116,6 @@ tags:
 **Кожаный чешуйчатый доспех.**
 
 **Бронированный плащ.** Кожаный плащ, усиленный скрытыми металлическими пластинами и при этом защитную природу этих плащей можно не заметить. Традиционно они снабжены потайными карманами и ножнами на запястьях, в которые можно поместить кинжал или другое небольшое оружие. Эту броню легко спутать с обычной одеждой; любой наблюдатель должен преуспеть в проверке Анализ КС 15, чтобы распознать истинную природу доспеха. Также бронированный плащ защищает персонажа от непогоды – ветра и дождя. Особое: если суммарная масса доспехов вместе с плащом более 30 фунтов; тогда бонус Максимальной Ловкости, который можно добавить к Классу Защиты, равен +2 (как для средних доспехов).
-
 
 ## Средние доспехи
 
@@ -198,7 +180,6 @@ tags:
 **Полный латный доспех.**
 
 **Слоеный сыромятный доспех.**
-
 
 ## Щиты
 
@@ -329,15 +310,10 @@ tags:
 Как уже упоминалось, дополнительными материалами для доспехов являются:
 
 - мифрал;
-    
 - адамантин;
-    
 - хитин из больших насекомых, таких как анкхеги;
-    
 - чешуя или шкура дракона;
-    
 - железное дерево
-    
 
 Про эффекты материалов мы будем говорить далее.
 
