--- a/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotchika-srazhenie-2.mdx
+++ b/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotchika-srazhenie-2.mdx
@@ -1,11 +1,11 @@
 ---
 title: 'Мысли вслух. Дневник разработчка, Сражение, часть 2'
 description: Заметки Паланта про сражение
-date: '2023-05-17'
-tags: 
-  - 'Core d20 RPG'
-  - 'Мысли вслух'
-  - 'Сражение'
+date: 2023-05-17
+tags:
+  - Core d20 RPG
+  - Мысли вслух
+  - Сражения
 ---
 
 ### Действия
