--- a/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotchka-srazhenie-1.mdx
+++ b/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotchka-srazhenie-1.mdx
@@ -1,11 +1,11 @@
 ---
 title: 'Мысли вслух. Дневник разработчка, Сражение, часть 1'
 description: Заметки Паланта про сражение
-date: '2023-05-17'
-tags: 
-  - 'Core d20 RPG'
-  - 'Мысли вслух'
-  - 'Сражение'
+date: 2023-05-17
+tags:
+  - Core d20 RPG
+  - Мысли вслух
+  - Сражения
 ---
 
 Поскольку в данный момент работаю я все-таки над элементами сражения, то и говорить надо про само сражение.
