--- a/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotki-snaryazhenie-chast-1.mdx
+++ b/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotki-snaryazhenie-chast-1.mdx
@@ -1,10 +1,9 @@
 ---
 title: '[Core d20 RPG] Мысли вслух. Дневник разработки. Снаряжение, часть 1'
 description: Очередная заметка про снаряжение
-date: '2023-02-22'
-tags: 
+date: 2023-02-22
+tags:
   - Core d20 RPG
-  - E5E
   - Homebrew
   - Cнаряжение
 ---
